--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 </head>
 <body>
   <h1>Welcome to My Website</h1>
+  <h4>Welcome to My Website</h4>
   <p>This is a simple HTML index page.</p>
 </body>
 </html>
