--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <h1>Welcome to My Website</h1>
   <h4>Welcome to My Website</h4>
   <h4>Welcome</h4>
+  <h4>Welcome to My Website</h4>
   <p>This is a simple HTML index page.</p>
 </body>
 </html>
