--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <h4>Welcome</h4>
   <h4>Welcome to My Website</h4>
   <h4>Welcome</h4>
+  <h4>Welcome to My Website</h4>
   <p>This is a simple HTML index page.</p>
 </body>
 </html>
